--- a/game-find.html
+++ b/game-find.html
@@ -9,7 +9,7 @@ layout: default
       <a
         :href="`https://www.daangn.com/search/${item.$t}`"
         target="_blank"
-        v-html="item.inputValue"
+        v-html="item.$t"
       ></a>
     </li>
   </ul>
